src/main/webapp/app/modeling-assessment-editor/modeling-assessment-editor.component.scss
$titlebar-height: 65px;

.top-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    jhi-alert {
        font-size: 0.9rem;
        line-height: 1.5;
        margin: 0;
    }
}

.row-container {
    display: flex;
    align-items: center;
}

.assessment-title {
    jhi-result {
        padding-left: 25px;
        font-size: 1rem;
    }
}

.control-container {
    button {
        margin-left: 15px;
    }
}

.assessment-container {
    display: flex;
    height: calc(100vh - 140px);
    flex-flow: column nowrap;
}

.editor-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    overflow: auto;
    jhi-modeling-assessment {
        max-width: 100%;
        min-width: 0;
    }
}

.conflict {
    background-color: rgb(248, 214, 217);
}

